# Neo-ODE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
demos/: CMakeCache.txt  Makefile  bind_test_ode.cc  cmake_install.cmake  plot_test_data.py  test_RC  test_RC.cc  test_alpha  test_alpha.cc  test_newmark  test_newmark.cc  test_ode  test_ode.cc  test_ode.py
demos/mass_spring/: Makefile  cmake_install.cmake  test_mass_spring
demos/src/: Makefile  cmake_install.cmake
mass_spring/: CMakeLists.txt  bind_mass_spring.cc  chain.ipynb  mass_spring.cc  mass_spring.h  mass_spring.ipynb  net.ipynb  test_mass_spring.py
src/: Newton.h  nonlinfunc.h  ode.h
